logs/test-amd64-apic-5.txt
AS  kernel/arch/amd64/boot/start.S
AS  kernel/arch/amd64/cpu/isr_stubs.S
AS  kernel/arch/amd64/cpu/syscall.S
AS  kernel/arch/amd64/cpu/context.S
AS  kernel/arch/amd64/boot/trampoline.S
CC  kernel/arch/amd64/cpu/cpu.c
CC  kernel/arch/amd64/cpu/idt.c
CC  kernel/arch/amd64/cpu/gdt.c
kernel/arch/amd64/cpu/gdt.c:32:30: error: 'MAX_CPUS' undeclared here (not in a function)
   32 | static struct tss64 tss_data[MAX_CPUS] __aligned(16);
      |                              ^~~~~~~~
kernel/arch/amd64/cpu/gdt.c: In function 'gdt_set_entry':
kernel/arch/amd64/cpu/gdt.c:37:4: error: invalid use of undefined type 'struct gdt_entry'
   37 |   e->limit_lo    = 0xFFFF;
      |    ^~
kernel/arch/amd64/cpu/gdt.c:38:4: error: invalid use of undefined type 'struct gdt_entry'
   38 |   e->base_lo     = 0;
      |    ^~
kernel/arch/amd64/cpu/gdt.c:39:4: error: invalid use of undefined type 'struct gdt_entry'
   39 |   e->base_mid    = 0;
      |    ^~
kernel/arch/amd64/cpu/gdt.c:40:4: error: invalid use of undefined type 'struct gdt_entry'
   40 |   e->access      = access;
      |    ^~
kernel/arch/amd64/cpu/gdt.c:41:4: error: invalid use of undefined type 'struct gdt_entry'
   41 |   e->granularity = gran;
      |    ^~
kernel/arch/amd64/cpu/gdt.c:42:4: error: invalid use of undefined type 'struct gdt_entry'
   42 |   e->base_hi     = 0;
      |    ^~
kernel/arch/amd64/cpu/gdt.c: In function 'gdt_set_tss':
kernel/arch/amd64/cpu/gdt.c:47:4: error: invalid use of undefined type 'struct gdt_system_entry'
   47 |   e->limit_lo    = (uint16_t)(limit & 0xFFFF);
      |    ^~
kernel/arch/amd64/cpu/gdt.c:48:4: error: invalid use of undefined type 'struct gdt_system_entry'
   48 |   e->base_lo     = (uint16_t)(base & 0xFFFF);
      |    ^~
kernel/arch/amd64/cpu/gdt.c:49:4: error: invalid use of undefined type 'struct gdt_system_entry'
   49 |   e->base_mid    = (uint8_t)((base >> 16) & 0xFF);
      |    ^~
kernel/arch/amd64/cpu/gdt.c:50:4: error: invalid use of undefined type 'struct gdt_system_entry'
   50 |   e->access      = 0x89; /* Present, 64-bit TSS (Available) */
      |    ^~
kernel/arch/amd64/cpu/gdt.c:51:4: error: invalid use of undefined type 'struct gdt_system_entry'
   51 |   e->granularity = (uint8_t)((limit >> 16) & 0x0F);
      |    ^~
kernel/arch/amd64/cpu/gdt.c:52:4: error: invalid use of undefined type 'struct gdt_system_entry'
   52 |   e->base_hi     = (uint8_t)((base >> 24) & 0xFF);
      |    ^~
kernel/arch/amd64/cpu/gdt.c:53:4: error: invalid use of undefined type 'struct gdt_system_entry'
   53 |   e->base_upper  = (uint32_t)(base >> 32);
      |    ^~
kernel/arch/amd64/cpu/gdt.c:54:4: error: invalid use of undefined type 'struct gdt_system_entry'
   54 |   e->reserved    = 0;
      |    ^~
kernel/arch/amd64/cpu/gdt.c: In function 'gdt_init':
kernel/arch/amd64/cpu/gdt.c:58:21: error: implicit declaration of function 'arch_get_cpu_id'; did you mean 'arch_impl_get_cpu_id'? [-Wimplicit-function-declaration]
   58 |   uint32_t cpu_id = arch_get_cpu_id();
      |                     ^~~~~~~~~~~~~~~
      |                     arch_impl_get_cpu_id
kernel/arch/amd64/cpu/gdt.c:87:10: error: variable 'gdtr' has initializer but incomplete type
   87 |   struct gdtr gdtr = {
      |          ^~~~
kernel/arch/amd64/cpu/gdt.c:88:6: error: 'struct gdtr' has no member named 'limit'
   88 |     .limit = (GDT_ENTRIES * 8) - 1,
      |      ^~~~~
kernel/arch/amd64/cpu/gdt.c:88:14: error: excess elements in struct initializer [-Werror]
   88 |     .limit = (GDT_ENTRIES * 8) - 1,
      |              ^
kernel/arch/amd64/cpu/gdt.c:88:14: note: (near initialization for 'gdtr')
kernel/arch/amd64/cpu/gdt.c:89:6: error: 'struct gdtr' has no member named 'base'
   89 |     .base  = (uint64_t)my_gdt
      |      ^~~~
kernel/arch/amd64/cpu/gdt.c:89:14: error: excess elements in struct initializer [-Werror]
   89 |     .base  = (uint64_t)my_gdt
      |              ^
kernel/arch/amd64/cpu/gdt.c:89:14: note: (near initialization for 'gdtr')
kernel/arch/amd64/cpu/gdt.c:87:15: error: storage size of 'gdtr' isn't known
   87 |   struct gdtr gdtr = {
      |               ^~~~
kernel/arch/amd64/cpu/gdt.c:87:15: error: unused variable 'gdtr' [-Werror=unused-variable]
kernel/arch/amd64/cpu/gdt.c: At top level:
kernel/arch/amd64/cpu/gdt.c:33:17: error: 'gdt_raw' defined but not used [-Werror=unused-variable]
   33 | static uint64_t gdt_raw[MAX_CPUS][GDT_ENTRIES] __aligned(16);
      |                 ^~~~~~~
kernel/arch/amd64/cpu/gdt.c:32:21: error: 'tss_data' defined but not used [-Werror=unused-variable]
   32 | static struct tss64 tss_data[MAX_CPUS] __aligned(16);
      |                     ^~~~~~~~
cc1: all warnings being treated as errors
make: *** [build/amd64/kernel/arch/amd64/cpu/gdt.o] Error 1
